fix: fix the footer spacing issue

--- a/apps/pdc-frontend/src/styles/globals.css
+++ b/apps/pdc-frontend/src/styles/globals.css
@@ -9,6 +9,8 @@ body {
 .utrecht-pdc-theme {
   --utrecht-page-footer-padding-block-end: 24px;
   --utrecht-page-footer-padding-block-start: 24px;
+  --utrecht-page-footer-padding-inline-start: 16px;
+  --utrecht-page-footer-padding-inline-end: 16px;
   --utrecht-page-padding-inline-start: 16px;
   --utrecht-page-padding-inline-end: 16px;
   --utrecht-space-around: 1;
@@ -230,7 +232,8 @@ p:has(a[class="utrecht-skip-link utrecht-skip-link--visible-on-focus"]) {
     --utrecht-drawer-padding-inline-start: 16px;
     --utrecht-page-footer-padding-block-end: 48px;
     --utrecht-page-footer-padding-block-start: 48px;
-    --utrecht-drawer-padding-inline-end: 32px;
+    --utrecht-page-footer-padding-inline-start: 32px;
+    --utrecht-page-footer-padding-inline-end: 32px --utrecht-drawer-padding-inline-end: 32px;
   }
 }
 
