--- a/apps/vth-frontend/src/styles/globals.css
+++ b/apps/vth-frontend/src/styles/globals.css
@@ -10,6 +10,8 @@
   --utrecht-page-padding-inline-end: 16px;
   --utrecht-page-footer-padding-block-end: 24px;
   --utrecht-page-footer-padding-block-start: 24px;
+  --utrecht-page-footer-padding-inline-start: 16px;
+  --utrecht-page-footer-padding-inline-end: 16px;
 
   /* --- navigation tokens start --- */
 
